// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marginInline renders 0 1`] = `
Array [
  .c0 {
  margin-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInline renders function 1`] = `
Array [
  .c0 {
  margin-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: has;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInline renders invalid theme path 1`] = `
Array [
  .c0 {
  margin-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInline renders negative number 1`] = `
Array [
  .c0 {
  margin-inline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    margin-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    margin-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginInline renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    margin-inline: July;
  }
}

@media April {
  .c0 {
    margin-inline: August;
  }
}

@media January {
  .c0 {
    margin-inline: September;
  }
}

@media April {
  .c0 {
    margin-inline: November;
  }
}

@media June {
  .c0 {
    margin-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    margin-inline: July;
  }
}

@media April {
  .c0 {
    margin-inline: August;
  }
}

@media January {
  .c0 {
    margin-inline: September;
  }
}

@media April {
  .c0 {
    margin-inline: November;
  }
}

@media June {
  .c0 {
    margin-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-inline: January;
  }
}

@media April {
  .c0 {
    margin-inline: December;
  }
}

@media January {
  .c0 {
    margin-inline: April;
  }
}

@media April {
  .c0 {
    margin-inline: May;
  }
}

@media June {
  .c0 {
    margin-inline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-inline: January;
  }
}

@media April {
  .c0 {
    margin-inline: December;
  }
}

@media January {
  .c0 {
    margin-inline: April;
  }
}

@media April {
  .c0 {
    margin-inline: May;
  }
}

@media June {
  .c0 {
    margin-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginInline renders postitive number 1`] = `
Array [
  .c0 {
  margin-inline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInline renders string 1`] = `
Array [
  .c0 {
  margin-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: June;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInline renders valid theme path 1`] = `
Array [
  .c0 {
  margin-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
